--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyD0YT3u-r7R53h2rtPO0FYMM1rrv9Xbl4M",
-      authDomain: "ordem-ficha.firebaseapp.com",
-      projectId: "ordem-ficha",
-      storageBucket: "ordem-ficha.appspot.com",
-      messagingSenderId: "543944476352",
-      appId: "1:543944476352:web:56edc79e7af373b5354f25"
+      apiKey: "AIzaSyCHkhFmJmMcl1O9uQl26kMax36sBhE-MxM",
+      authDomain: "rpgmoon-15c93.firebaseapp.com",
+      projectId: "rpgmoon-15c93",
+      storageBucket: "rpgmoon-15c93.appspot.com",
+      messagingSenderId: "791917486034",
+      appId: "1:791917486034:web:c6d49e2c144350d28bf20b"
     };
 
     // Initialize Firebase
